--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 *.iml
 .gradle
-/.idea
+.idea
 *.idea
 .idea/*
-/local.properties
+/.idea
+/.idea/*
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/.name
+/local.properties
 .DS_Store
 /build
 /captures
