--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,19 @@
 *.idea
 .idea/*
 /.idea
+/.idea/
 /.idea/*
+/.idea/*.*
 /.idea/workspace.xml
 /.idea/libraries
 /.idea/.name
+/.idea/gradle.xml
+.idea/gradle.xml
+/.idea/modules.xml
+.idea\modules.xml
+.idea/modules.xml
+.idea\/modules.xml
+\.idea\/modules.xml
 /local.properties
 .DS_Store
 /build
